welcome.lessons.welcome.methods.slug.SlugSnail.scala.error
SlugSnail:8: error: not found: value isFacingTrail
      while ( ! isFacingTrail()) {
                ^